# bigquery-hackathon

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Ecommerce_Recommendation_Quality_Performance_Check.ipynb  Ecommerce_Recommendation_with_Python.ipynb  README.md  SECURITY.md  Setup_Table_Analysis_with_Bigquery.ipynb  Setup_Table_Analysis_with_Bigquery.ipynb.ipynb  Setup_Table_Model_Index_and_Analysis_with_Bigquery.ipynb  pyproject.toml  thelook_vector_search_demo_updated.ipynb
.pre-commit-hooks/: strip_widgets.py
