[project]
name = "bigquery-hackathon"
version = "0.1.0"
description = "Ecommerce Recommendation with bigquery and python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "db-dtypes>=1.4.3",
    "google-cloud-bigquery>=3.38.0",
    "google-cloud-bigquery-storage>=2.33.1",
    "google-cloud-storage>=3.4.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
]
